// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EXACT: DONT show active class 1`] = `
<a
  aria-current={false}
  className={undefined}
  href="/second"
  onClick={[Function]}
  style={undefined}
/>
`;

exports[`NON-EXACT: show active class 1`] = `
<a
  aria-current="true"
  className="active"
  href="/first"
  onClick={[Function]}
  style={Object {}}
/>
`;

exports[`STRICT: DONT show active class 1`] = `
<a
  aria-current={false}
  className={undefined}
  href="/first/"
  onClick={[Function]}
  style={undefined}
/>
`;

exports[`combine with existing styles and class 1`] = `
<a
  aria-current="true"
  className="foo active"
  href="/first"
  onClick={[Function]}
  style={
    Object {
      "color": "red",
      "fontSize": 32,
    }
  }
/>
`;

exports[`isActive return false 1`] = `
Object {
  "isExact": true,
  "params": Object {},
  "path": "/first",
  "url": "/first",
}
`;

exports[`isActive return false 2`] = `
Object {
  "hasSSR": undefined,
  "history": undefined,
  "kind": "load",
  "pathname": "/first",
  "payload": Object {},
  "prev": Object {
    "pathname": "",
    "payload": Object {},
    "type": "",
  },
  "routesMap": Object {
    "FIRST": "/first",
    "SECOND": "/second/:param",
  },
  "type": "FIRST",
}
`;

exports[`isActive return false 3`] = `
<a
  aria-current={false}
  className={undefined}
  href="/first"
  onClick={[Function]}
  style={undefined}
/>
`;

exports[`isActive returns true 1`] = `
Object {
  "isExact": true,
  "params": Object {},
  "path": "/first",
  "url": "/first",
}
`;

exports[`isActive returns true 2`] = `
Object {
  "hasSSR": undefined,
  "history": undefined,
  "kind": "load",
  "pathname": "/first",
  "payload": Object {},
  "prev": Object {
    "pathname": "",
    "payload": Object {},
    "type": "",
  },
  "routesMap": Object {
    "FIRST": "/first",
    "SECOND": "/second/:param",
  },
  "type": "FIRST",
}
`;

exports[`isActive returns true 3`] = `
<a
  aria-current="true"
  className="active"
  href="/first"
  onClick={[Function]}
  style={Object {}}
/>
`;

exports[`query params are ommitted 1`] = `
<a
  aria-current="true"
  className="active"
  href="/first?foo=123"
  onClick={[Function]}
  style={Object {}}
/>
`;

exports[`reacts to state changes (onClick) 1`] = `
<a
  aria-current={false}
  className={undefined}
  href="/second/bar"
  onClick={[Function]}
  style={undefined}
/>
`;

exports[`reacts to state changes (onClick) 2`] = `
<a
  aria-current="true"
  className="active"
  href="/second/bar"
  onClick={[Function]}
  style={Object {}}
/>
`;

exports[`show activeStyle 1`] = `
<a
  aria-current="true"
  className="active"
  href="/first"
  onClick={[Function]}
  style={
    Object {
      "color": "red",
    }
  }
/>
`;

exports[`supports custom HTML tag name 1`] = `
<div
  aria-current={false}
  className={undefined}
  onClick={[Function]}
  style={undefined}
/>
`;

exports[`supports custom HTML tag name in active mode 1`] = `
<div
  aria-current="true"
  className="active-foo"
  onClick={[Function]}
  style={Object {}}
/>
`;

exports[`supports custom HTML tag name which is still a link 1`] = `
<a
  aria-current={false}
  className={undefined}
  href="somewhere"
  onClick={[Function]}
  style={undefined}
/>
`;
